Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112973

MediaPlayer example cannot open any file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.9, 6.5.2, 6.6.0
    • 6.5.1, dev
    • Multimedia
    • None
    • Android
    • 9e9cca08e (dev), d9f938fd8 (6.5), 378e41818 (tqtc/lts-6.2)
    • 2023wk18FOQtforAndroid

    Description

      There is a regresssion in ffmpeg backend in Mediaplayer. It does not work for Content:// URL. In the patch  openFdForContentUrl was removed while mediaplayer implementation is still using it.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-112973
          # Subject Branch Project Status CR V

          Activity

            People

              bartlomiejmoskal Bartlomiej Moskal
              bartlomiejmoskal Bartlomiej Moskal
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes