Android: Use QFile for content url

Following Scoped Storage feature implementation, the java APIs to
obtain a filedescriptor from a content scheme were removed.
QFile now supports content url, so it was changed to use that.
The QFile still needs to be used as a stream.

Fixes: QTBUG-112973
Change-Id: I0b023be6adab81a591ce0e8a81128e4ca00ba213
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 9e9cca08ef53692b54a5f02566af7efe439673c9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>